few more examples

--- a/attraction.tex
+++ b/attraction.tex
@@ -3,9 +3,27 @@
 \chapter{Case attraction}
 
 
-\exg. Aer antuurta d-emo zaimo sprah.\\
-he replied\scsub{dat} who-\tsc{dat} {to him} spoke\scsub{nom}\\
-`He replied to the one who spoke to him.'
+\ex.
+\ag. Aer antuurta demo zaimo sprah.\\
+he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
+`He replied to the one who spoke to him.' Pittner 199
+\bg. Der bewîst in d.es er suochte.\\
+he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
+`He showed him what he was looking for.' Pittner 199
 \z.
+
+\ex. Behagel examples attraction
+\ag. duhwe ni gaggand bi þammei anafulhen þai sinistans\\
+ \\
+ `'
+\bg. ei galaubjaiþ þammei insandida jains\\
+ \\
+ `'
+\bg. þaimei iupa sind, fraþjaiþ\\
+ \\
+ `'
+\bg. þoei ist us Leudeikaion, jus ussiggwaid\\
+ \\
+ `'
 
 \phantom{x}
