all attraction headless examples in
no tranlsations and glosses yet

--- a/attraction.tex
+++ b/attraction.tex
@@ -12,18 +12,83 @@ he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
 `He showed him what he was looking for.' Pittner 199
 \z.
 
-\ex. Behagel examples attraction
-\ag. duhwe ni gaggand bi þammei anafulhen þai sinistans\\
+
+\section{Headless relative clauses}
+
+\subsection{Proper attraction}
+
+
+\ex. Old Saxon
+\ag. botta them thar blinde warun\\
  \\
- `'
-\bg. ei galaubjaiþ þammei insandida jains\\
+ `' \hfill (Old Saxon, Heliand 2358, \citealt[761]{behaghel1923})
+\bg. minniston sindun thero nu...standad\\
  \\
- `'
-\bg. þaimei iupa sind, fraþjaiþ\\
+ `' \hfill (Old Saxon, Heliand 4411, \citealt[761]{behaghel1923})
+\bg. he thes wiht ne bisprak, thes sie imu thurk inwidnid ogean weldun\\
  \\
- `'
-\bg. þoei ist us Leudeikaion, jus ussiggwaid\\
+ `' \hfill (Old Saxon, Helian 4923, \citealt[761]{behaghel1923})
+\bg. thu mahtis man wesan, giungaro fan Galilea, thes the thar genower sted\\
  \\
- `'
+ `' \hfill (Old Saxon, Heliand 4957, \citealt[761]{behaghel1923})
+
+\ex. Old High German
+\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
+ \\
+ `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+\bg. aer antwurta demo za imo sprah\\
+ \\
+ `' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
+\bg. gaat uz diu halt za dem iz forchaufent\\
+ \\
+ `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
+\bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+ \\
+ `' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
+\bg. er sprah zi then es ruahtun\\
+ \\
+ `' \hfill (Old High German, Otfrid I,23,35, \citealt[761]{behaghel1923})
+\bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+ \\
+ `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
+\bg. bistu furira Abrahame, ouh then man hiar nu zalta.\\
+ \\
+ `' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
+\bg. thia laz ih themo iz lisit thar\\
+ \\
+ `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
+\bg. suachit thes nan sentit\\
+ \\
+ `' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
+\bg. noh so neduohti in gnuoge des si habetin\\
+ \\
+ `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
+\bg. tannoh pito ih tes noh fore ist (id quod)\\
+ \\
+ `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
+
+
+\ex. Middle High German
+\ag. der bewiset in des er suochte\\
+ he directed\scsub{gen} him {what}.\tsc{gen} he sought\scsub{acc}\\
+ `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
+
+
+\ex. ?
+\ag. diu habe niemer niht entuot, des der seele schaden si\\
+ \\
+ `' \hfill (?, Warn. 2490, \citealt[761]{behaghel1923})
+\bg. des himels unt der erde und swes din kint dar inne begriffen hat\\
+ \\
+ `' \hfill (?, R. v. Zw. 21,8, \citealt[761]{behaghel1923})
+\bg. die bevogtet werden sollen mit dem nechsten vattermagen oder dem dazu erkoren wird\\
+ \\
+ `' \hfill (?, Weist. 1,65, \citealt[761]{behaghel1923})
+\bg. diese Handlung der Merope gefalle, wem da will\\
+ \\
+ `' \hfill (?, Less. 11,203, \citealt[761]{behaghel1923})
+\bg. dem Wanderer zu bieten Schutz und Rast und wen's auch sei zu wärmen und zu laben\\
+ \\
+ `' \hfill (?, Redwitz, Amaranth (Bl), \citealt[761]{behaghel1923})
 
 \phantom{x}
