--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -24,6 +24,14 @@
   year={1991}
 }
 
+@book{behaghel1923,
+  title={Deutsche Syntax: Eine geschichtliche Darstellung},
+  author={Behaghel, Otto},
+  year={1923-1932},
+  publisher={Winter},
+  address={Heidelberg}
+}
+
 @article{bergsma2019,
   title={Mismatches in free relatives--grafting nanosyntactic trees},
   author={Bergsma, Fenna},
@@ -22056,7 +22064,7 @@
   author={Boef, Eefje},
   year={2013},
   publisher={Netherlands Graduate School of Linguistics},
-  adress={Utrecht}
+  address={Utrecht}
 }
 
 @incollection{zwart2005,
