end of thursday
yes

--- a/attraction.tex
+++ b/attraction.tex
@@ -17,20 +17,21 @@ he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
 
 \subsection{Proper attraction}
 
-
 \ex. Old Saxon
-\ag. botta them thar blinde warun\\
- \\
- `' \hfill (Old Saxon, Heliand 2358, \citealt[761]{behaghel1923})
-\bg. minniston sindun thero nu...standad\\
- \\
- `' \hfill (Old Saxon, Heliand 4411, \citealt[761]{behaghel1923})
-\bg. he thes wiht ne bisprak, thes sie imu thurk inwidnid ogean weldun\\
- \\
- `' \hfill (Old Saxon, Helian 4923, \citealt[761]{behaghel1923})
-\bg. thu mahtis man wesan, giungaro fan Galilea, thes the thar genower sted\\
- \\
- `' \hfill (Old Saxon, Heliand 4957, \citealt[761]{behaghel1923})
+\ag. bôtta, them thar blinde uuârun\\
+ comfort.\tsc{3.sg.prät}\scsub{dat} that.\tsc{pl.dat} there blind were\scsub{nom}\\
+ `He comforted those that were blind' \hfill (Old Saxon, Heliand 2358, \citealt[761]{behaghel1923})
+\bg. them mannun, the hêr minniston sindun, [thero] nu undar thesaru menegi [standad]\\
+ the men, that here lowest are.\tsc{3pl}\scsub{gen} that.\tsc{pl.gen} now under these crowd stand.\tsc{3.pl.präs}\scsub{nom}\\
+ `To the men who are the least of those standing here ’mid the many,' \hfill (Old Saxon, Heliand 4411, \citealt[761]{behaghel1923})
+\bg. bethiu he thes uuiht ne bisprak,
+thes sie imu thurh inuuidnîð ôgean uueldun.\\
+ therefore he that.\tsc{m.sg.gen} something.\tsc{sg.acc} not {speak about}.\tsc{3.sg.prät}
+ that.\tsc{m.sg.gen} they ? through hostility show want.\tsc{3.pl.prät}\\
+ `therefore he reproached them no whit, for that which they would do unto him in their hatred and anger.' \hfill (Old Saxon, Helian 4923, \citealt[761]{behaghel1923})
+\bg. huat, thu mahtis man uuesan, giungaro fan Galilea, thes the thar genouuer stêd\\
+ what.\tsc{acc} \tsc{2.sg} may.\tsc{2.sg.prät.conj} man.\tsc{nom.sg} be.\tsc{inf} disciple from Galilee.\tsc{dat.pl} that.\tsc{m.sg.gen} that.\tsc{nom.sg.m} there there stood.\tsc{3.sg.prät} \\
+ `what, you might have been a man, disciple from Galilee, of him who stood there' \hfill (Old Saxon, Heliand 4957-4958, \citealt[761]{behaghel1923})
 
 \ex. Old High German
 \ag. ih bibringu fona Juda dhen mina berga chisetzit\\
@@ -45,8 +46,8 @@ he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
 \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
  \\
  `' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
-\bg. er sprah zi then es ruahtun\\
- \\
+\bg. er spráh zi then es rúahtun\\
+ he spoke to those.\tsc{dat}\\
  `' \hfill (Old High German, Otfrid I,23,35, \citealt[761]{behaghel1923})
 \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
  \\
@@ -70,7 +71,7 @@ he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
 
 \ex. Middle High German
 \ag. der bewiset in des er suochte\\
- he directed\scsub{gen} him {what}.\tsc{gen} he sought\scsub{acc}\\
+ he directed\scsub{gen} him {that}.\tsc{gen} he sought\scsub{acc}\\
  `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
 
 
@@ -86,9 +87,58 @@ he showed\scsub{gen} him what.\tsc{gen} he {looked for}\scsub{acc}\\
  `' \hfill (?, Weist. 1,65, \citealt[761]{behaghel1923})
 \bg. diese Handlung der Merope gefalle, wem da will\\
  \\
- `' \hfill (?, Less. 11,203, \citealt[761]{behaghel1923})
+ `' \hfill (?, Gotthold Ephraim Lessing 11,203, \citealt[761]{behaghel1923})
 \bg. dem Wanderer zu bieten Schutz und Rast und wen's auch sei zu wärmen und zu laben\\
  \\
  `' \hfill (?, Redwitz, Amaranth (Bl), \citealt[761]{behaghel1923})
+
+\exg. Magst gefallen wem du wilt\\
+ \\
+ `' \hfill Adversus - Komm' oh Tod
+
+
+
+
+\section{Headless relative clauses}
+
+\subsection{Proper attraction}
+
+\ex. \tsc{gen} instead of \tsc{dat}?
+
+\ex. \tsc{gen} instead of \tsc{acc}
+\ag. alles des ich ie gesach\\
+ all.\tsc{gen} that.\tsc{gen} I ever saw\\
+ `all that I ever saw.' \hfill (Middle High German, Nibelungenlied 1698,1, \citealt[756]{behaghel1923}, glosses and translation by \citealt[199]{pittner1995})
+\bg. Do sagete er Parziwale danc prises des erwarp sin hant\\
+ there said he Parzival thanks\scsub{gen} prize.\tsc{gen} that.\tsc{gen} acquired\scsub{acc}\\
+ `he thanked Parzival for the prize that he acquired' \hfill (Middle High German, Parzival 3:1209, glosses and translation by \citealt[174]{helgander1971} after \citealt[198]{pittner1995})
+
+\ex. \tsc{gen} instead of \tsc{nom}
+\ag. daz er [...] alles des verplac des im ze schaden mohte komen \\
+ that he all that.\tsc{gen} abandoned\scsub{gen} that.\tsc{gen} him to damage might come\scsub{nom}\\
+ `that he abandoned all that might cause damage to him' \hfill (Middle High German, Iwein 5338, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})
+\bg.  sie gedâht' ouch maniger leide, der ir dâ héimé geschach\\
+ she thought\scsub{gen} also some sufferings.\tsc{gen} that.\tsc{gen} her at home happened\scsub{nom}\\
+ `she thought about some misfortunes that happened to her at home.' \hfill (Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})
+
+\ex. \tsc{dat} instead of \tsc{acc}?
+
+\ex. \tsc{dat} instead of \tsc{nom}
+
+
+
+
+\ex. \tsc{acc} instead of \tsc{nom}
+\ag. unde ne wolden níet besên den mort den dô was geschên\\
+ and not wanted not see the murder.\tsc{acc} that.\tsc{acc} there had happened\\
+ `and they didn't want to see the murder that had happened.' \hfill (Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})
+
+
+
+
+
+
+
+
 
 \phantom{x}
