--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -14,6 +14,21 @@
   year = {2004}
 }
 
+@incollection{pittner1996,
+  title={Attraktion, Tilgung und Verbposition: zur diachronen und dialektalen Variation beim Relativpronomen im Deutschen},
+  author={Pittner, Karin},
+  booktitle={Language change and Generative Grammar},
+  pages={120--153},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{helgander1971,
+  title={The relative clause in English and other Germanic languages: a historical and analytical survey},
+  author={Helgander, John},
+  year={1971}
+}
+
 @article{corver1991,
   title={The internal syntax and movement behavior of the Dutch ‘wat voor’-construction},
   author={Corver, Norbert},
