worked on intro
part about normal german

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,14 +2,32 @@
 
 \chapter{Introduction}
 
-The topic of this thesis is case attraction in headless relative clauses.
+The topic of this thesis is case attraction in headless relative clauses. First I talk about the role of case in language. Second I discuss regular headed relative clauses and how they handle case. Third I introduce a phenomenon called case attraction in headed relative clause. Finally, I get to headless relative clauses that show case attraction.
 
 \section{Case attraction}
 
-normal headed relatives, cases can differ
-in most languages, element takes case of its clause
-see here an example of modern german.
+Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. In \ref{ex:germancase1}, \tit{der Lehrer} `the teacher' is marked nominative, and it is the subject. \tit{Den Schüler} `the student' is marked accusative, and it is an object. In \ref{ex:germancase2}, the roles are reversed: \tit{der Schüler} `the student' is marked nominative and it is the subject, and \tit{den Lehrer} `the teacher' is marked accusative and it is the object. Notice also that the subject precedes the predicate \tit{mag} `likes' and the object follows it.
 
+\ex.\label{ex:germancase}
+\ag. Der Lehrer mag den Schüler.\\
+ the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student\\
+ `The teacher likes the student.'\label{ex:germancase1}
+\bg. Der Schüler mag den Lehrer.\\
+ the.\tsc{m.nom} student likes the.\tsc{m.acc}\\
+ `The student likes the teacher.'\label{ex:germancase2}
+
+Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. In \ref{ex:germanrelative1}, the relative pronoun \tit{der} `that.\tsc{m.nom}' introduces a clause that modifies \tit{den Schüler} `the student'. \tit{Der} `that.\tsc{m.nom}' is marked masculine and nominative. The relative pronoun is marked masculine, because it agrees in gender with its antecedent \tit{den Schüler} `the student'. It is marked nominative, because of its grammatical role: it is the subject in the relative clause.
+In \ref{ex:germanrelative2}, the relative pronoun \tit{den} `that.\tsc{m.acc}' is marked masculine and accusative. Again, the relative pronoun is marked masculine, because it agrees in gender with its antecedent \tit{den Schüler} `the student'. It is marked accusative, because of its grammatical role: it is the object in the relative clause.
+
+\ex.\label{ex:germanrelatives}
+\ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
+ the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.nom} to outside looks\\
+ `The teacher likes the student that is looking outside.'\label{ex:germanrelative1}
+ \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
+ the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.acc} he {at the} {hide-and-seek game} seeks\\
+ `The teacher likes the student that he is looking for playing hide-and-seek.'\label{ex:germanrelative2}
+
+This pattern occurs in German, most other modern languages. In some ancient languages the relative pronoun did not take the case of the grammatical role in its own clause.
 
 in other languages (mostly ancient, but also modern Greek) cases do not match within their clauses, but they match with each other.
 relative pronoun takes case from the NP in the main clause: case attraction
