don't commit all extensions
yes

--- a/introduction.tex
+++ b/introduction.tex
@@ -27,20 +27,32 @@ In \ref{ex:germanrelative2}, the relative pronoun \tit{den} `that.\tsc{m.acc}' i
  the.\tsc{m.nom} teacher likes the.\tsc{m.acc} student that.\tsc{m.acc} he {at the} {hide-and-seek game} seeks\\
  `The teacher likes the student that he is looking for playing hide-and-seek.'\label{ex:germanrelative2}
 
-This pattern occurs in German, most other modern languages. In some ancient languages the relative pronoun did not take the case of the grammatical role in its own clause.
+--from here on it still needs working out--
 
-in other languages (mostly ancient, but also modern Greek) cases do not match within their clauses, but they match with each other.
-relative pronoun takes case from the NP in the main clause: case attraction
-example from old high german
+This pattern occurs in German, most other modern languages. In some ancient languages the relative pronoun did not take the case of the grammatical role in its own clause. Instead, it agrees in case with its antecedent. This is called case attraction. The relative pronoun is attracted to its antecedent(?).
 
-there is a generalization here: more complex case wins
+\exg. sie gedâht' ouch maniger leide, der ir dâ héimé geschach.\\
+she thought\scsub{gen} also some.\tsc{gen} sufferings.\tsc{gen} which.\tsc{gen} her at home happened\scsub{nom}\\
+`She thought about some misfortunes that happened to her at home'\hfill attraction headed relative
+
+there is a generalization here: more complex case wins. maybe don't mention that here yet.
 
 
 \section{Headless relatives}
 
-proper attraction headless
-inverse attraction headless
+So far I discussed headed relatives. Headless relatives also exist. The antecedent is missing. We also observe case attraction there. It is less easy to see because the antecedent NP is missing, but we know what's going on because of the case requirements of the predicates. So this actually means is that the relative pronoun takes the case from the main clause (where normally the antecedent was). This is called proper attraction.
 
+\exg. Aer antuurta demo zaimo sprah.\\
+he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
+`He replied to the one who spoke to him.'\hfill proper attraction headless relative
+
+Attraction can also go in the other direction (i.e. NP takes the case from relative pronoun), which is called inverse attraction. Below I give an example of inverse attraction with a head. This boils down to the relative pronoun taking the case from the embedded clause.
+
+\exg. Ich {lade ein}, wem Maria vertraut. \\
+I invite\scsub{acc} who.\tsc{dat} also Maria trusts\scsub{dat}\\
+`I invite whoever Maria also trusts.' \hfill invserse attraction headless relative
 
 
 \section{The variation}
+
+Old High German goes left, Modern German goes right. How can this variation be captured, other than stipulating a parameter for direction of attraction.
