--- a/thesis.tex
+++ b/thesis.tex
@@ -19,7 +19,7 @@
 \include{introduction}
 
 \part{Morphological case}
-\include{attraction}
+\include{old_attraction-direction}
 
 \part{Prepositional case}
 
