--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -3,12 +3,11 @@
 \usepackage[normalem]{ulem}%strikethrough
 
 %%%sections%%%
-\usepackage{titlesec}%add another level under section
-\setcounter{secnumdepth}{4}
-\titleformat{\paragraph}
-{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
-\titlespacing*{\paragraph}
-{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+% \usepackage{titlesec}%add another level under section
+% \titleformat{\paragraph}
+% {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+% \titlespacing*{\paragraph}
+% {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
 %%%trees%%%
 \usepackage[linguistics]{forest}
