--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,11 @@
 
 The topic of this thesis is case attraction in headless relative clauses. First I talk about the role of case in language. Second I discuss regular headed relative clauses and how they handle case. Third I introduce a phenomenon called case attraction in headed relative clause. Finally, I get to headless relative clauses that show case attraction.
 
-\section{Case attraction}
+
+\section{Explaining the basics/title}
+
+
+\subsection{Case attraction}
 
 Languages can use case to mark the grammatical role of a noun phrase in a clause. Consider the two Modern German sentences in \ref{ex:germancase}. In \ref{ex:germancase1}, \tit{der Lehrer} `the teacher' is marked nominative, and it is the subject. \tit{Den Schüler} `the student' is marked accusative, and it is an object. In \ref{ex:germancase2}, the roles are reversed: \tit{der Schüler} `the student' is marked nominative and it is the subject, and \tit{den Lehrer} `the teacher' is marked accusative and it is the object. Notice also that the subject precedes the predicate \tit{mag} `likes' and the object follows it.
 
@@ -38,7 +42,7 @@ she thought\scsub{gen} also some.\tsc{gen} sufferings.\tsc{gen} which.\tsc{gen} 
 there is a generalization here: more complex case wins. maybe don't mention that here yet.
 
 
-\section{Headless relatives}
+\subsection{Headless relatives}
 
 So far I discussed headed relatives. Headless relatives also exist. The antecedent is missing. We also observe case attraction there. It is less easy to see because the antecedent NP is missing, but we know what's going on because of the case requirements of the predicates. So this actually means is that the relative pronoun takes the case from the main clause (where normally the antecedent was). This is called proper attraction.
 
@@ -46,13 +50,30 @@ So far I discussed headed relatives. Headless relatives also exist. The antecede
 he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
 `He replied to the one who spoke to him.'\hfill proper attraction headless relative
 
-Attraction can also go in the other direction (i.e. NP takes the case from relative pronoun), which is called inverse attraction. Below I give an example of inverse attraction with a head. This boils down to the relative pronoun taking the case from the embedded clause.
+
+
+\section{Case complexity}
+
+case attraction always follows the hierarchy
+
+
+
+\section{Direction of attraction}
+
+case attraction can go two ways
+
+\exg. Aer antuurta demo zaimo sprah.\\
+he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
+`He replied to the one who spoke to him.'\hfill proper attraction headless relative
 
 \exg. Ich {lade ein}, wem Maria vertraut. \\
 I invite\scsub{acc} who.\tsc{dat} also Maria trusts\scsub{dat}\\
 `I invite whoever Maria also trusts.' \hfill invserse attraction headless relative
 
+the morphology of the relative pronouns decides which one is possible
 
-\section{The variation}
 
-Old High German goes left, Modern German goes right. How can this variation be captured, other than stipulating a parameter for direction of attraction.
+
+\section{Prepositions}
+
+and r-pronouns
