--- a/some old_attraction-direction.tex
+++ b/some old_attraction-direction.tex
@@ -78,22 +78,7 @@ In \ref{ex:invattgot}, I give an example of inverse attraction in which the exte
 
 In Table \ref{tbl:intextgoth}, Gothic is added to the schematic representation.
 
-\begin{table}[h]\label{tbl:intextgoth}
-	\center
-	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
-	\begin{minipage}{\linewidth}
-		\begin{tabularx}{\textwidth}{c *{2}{Y}}
-		\toprule
-		 								& \tsc{int>ext}				& \tsc{ext>int}				\\
-										& inverse attraction	& proper attraction		\\
-		\midrule
-		Modern German 	& ✔			 							&	*										\\
-		Old High German	& *										&	✔										\\
-		Gothic					&	✔										&	✔										\\
-		\bottomrule
-		\end{tabularx}
-	\end{minipage}
-\end{table}
+
 
 The fourth logical option that is missing from this table, namely a language that does not allow mismatching cases at all. --am I going to discuss that here or not? the languages that are like this have the following profile: lightheaded relatives are = wh + d.--
 
@@ -510,7 +495,7 @@ Finally \tit{replied} can be merged. Then, optionally, the lowest \tit{demo} can
 	]
 	\end{forest}
 
-Do these two empty elements make sense? I would suggest yes. We indenpendently see that the lower \tit{d}-element is optional in Old High German relative clauses. We can also independently observe that the head NP can be zero, in light headed relatives.
+Do these two empty elements make sense? I would suggest yes. We independently see that the lower \tit{d}-element is optional in Old High German relative clauses. We can also independently observe that the head NP can be zero, in light headed relatives.
 
 Deletion of the lower d-pronoun is optional. --show evidence for this: Old High German example with full NP as antecedent but no relative pronoun--
 
