--- a/thesis.tex
+++ b/thesis.tex
@@ -16,12 +16,16 @@
 \newpage
 \tableofcontents
 
+
 \include{introduction}
 
-\part{Morphological case}
-\include{old_attraction-direction}
+\include{case-complexity}
+\include{direction-of-attraction}
+\include{prepositions}
 
-\part{Prepositional case}
+\include{conclusion}
+
+
 
 \printbibliography
 
