--- a/fenna-files/commands.sty
+++ b/fenna-files/commands.sty
@@ -16,3 +16,7 @@
 \newcommand{\seccitep}[2]{(\citealt{#1}:~$\S$#2)}
 \newcommand{\pgcitet}[2]{\citeauthor{#1} (\citeyear{#1}:~#2)}
 \newcommand{\seccitet}[2]{\citeauthor{#1} (\citeyear{#1}:~$\S$#2)}
+
+%%%depth up to subsections also in toc%%%
+\setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{4}
