--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -6,6 +6,7 @@
   \section{Typology}
 Old High German only has proper attraction. Modern German only has inverse attraction. Gothic has both proper and inverse attraction.
 
+
 \begin{table}[h]\label{tbl:intextgoth}
 	\center
 	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
@@ -26,6 +27,93 @@ Old High German only has proper attraction. Modern German only has inverse attra
 
     \subsection{Gothic}
     \subsection{Old High German}
+
+\ex. \tsc{ext:gen}, \tsc{int:nom}
+\ag. suachit thes nan sentit\\
+ search.\tsc{3.sg}\scsub{dat} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
+ `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
+\bg. diu habe niemer niht entuot, des der seele schaden si\\
+ they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{nom}\\
+ `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
+
+\ex. \tsc{ext:dat}, \tsc{int:nom}
+\ag. Aer antuurta demo zaimo sprah.\\
+he replied\scsub{dat} D-\tsc{m.sg.dat} {to him} spoke\scsub{nom}\\
+`He replied to the one who spoke to him.' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
+\bg. gebe themo ni eigi\\
+ give\scsub{dat} D--\tsc{m.sg.dat} not posses\scsub{nom}\\
+ `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
+
+\ex. \tsc{ext:acc}, \tsc{int:nom}
+
+
+\ex. \tsc{ext:gen}, \tsc{int:acc}
+\ag. der bewiset in des er suochte\\
+ he directed\scsub{gen} him D-\tsc{n.sg.gen} he sought\scsub{acc}\\
+ `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
+\bg. giwisso ni birut ir thero ih irwellu zi mir\\
+ bestimmt not belong\scsub{gen} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{acc} to me\\
+ `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III,22,20, Schrodt,p.175)
+
+\ex. \tsc{ext:dat}, \tsc{int:acc}
+\ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
+ {are you} {bigger than}\scsub{dat} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{acc}\\
+ `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
+
+\ex. \tsc{ext:gen}, \tsc{int:dat}
+
+
+
+
+
+Don't know:
+
+\ex. Old High German
+\ag. gaat uz diu halt za dem iz forchaufent\\
+ \\
+ `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
+\bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+ \\
+ `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
+\bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+ \\
+ `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
+\bg. thia laz ih themo iz lisit thar\\
+ \\
+ `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
+\bg. noh so neduohti in gnuoge des si habetin\\
+ \\
+ `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
+\bg. tannoh pito ih tes noh fore ist (id quod)\\
+ \\
+ `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
+\bg. ih bibringu fona Juda dhen mina berga chisetzit\\
+  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
+  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+
+So, to sum up:
+
+  \begin{table}[h]
+    \center
+    \caption {Case attraction in headless relatives in Old High German}
+      \begin{minipage}{\linewidth}
+        \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+          \toprule
+            \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	 & V\scsub{nom} 		& V\scsub{acc} 											                                & V\scsub{dat} 											                                  & V\scsub{gen} 											                  \\ \cmidrule(lr){1-5}
+            V\scsub{nom} 		                                 & \colorbox{Gray}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} 	                & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
+            V\scsub{acc} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{Gray}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} 	                &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
+            V\scsub{dat} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{gray}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{Gray}{\tsc{dat}} 			                                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
+            V\scsub{gen} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{Gray}{\tsc{gen}}				                  \\
+          \bottomrule
+        \end{tabularx}
+      \end{minipage}
+  \end{table}
+
+
+
+
+
+
     \subsection{Modern German}
 
 
@@ -37,10 +125,49 @@ Standard raising, probably Cinque's double-headed structures
   \section{Shape of relative pronoun}
 Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-pronoun plus a caseless relativizer.
 
+
+\begin{table}[h]\label{tbl:intextgoth}
+	\center
+	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
+	\begin{minipage}{\linewidth}
+		\begin{tabularx}{\textwidth}{c *{6}{Y}}
+		\toprule
+		\tsc{sg}	& \tsc{m}         & \tsc{n}              &\tsc{f}                \\
+		\midrule
+		\tsc{nom} & dëse, dësēr			& diz							     &	dësiu, disiu (thisu) \\
+		\tsc{acc}	& dësan						&	diz		        	     &	dësa								 \\
+		\tsc{dat}	&	dësemu, dësemo	&	dësemu, dësemo	     & dëseru							   \\
+    \tsc{gen} & dësses          & dësses               & dësera                \\
+		\bottomrule
+    \toprule
+    \tsc{pl}	& \tsc{m}         & \tsc{n}              &\tsc{f}                \\
+    \midrule
+    \tsc{nom} &  dëse           & dësiu, disiu (thisu) & dëso                  \\
+    \tsc{acc} &  dëse           & dësiu, disiu (thisu) & dëso                  \\
+    \tsc{dat} &  dësēm, dësen   & dësēm, dësen         & dësēm, dësen          \\
+    \tsc{gen} &  dësero         & dësero               & dësero                \\
+    \bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
+
+
+
+
   \section{Analysis}
 
     \subsection{Old High German}
 In Old High German, proper attraction in headless relatives can be derived from headed relatives. The relative pronoun is the determiner from the main clause. Under a double-headed Cinque-analysis, it is the internal DP that is deleted.
+
+
+
+
+\ex. \tsc{acc} instead of \tsc{nom}
+\ag. unde ne wolden níet besên den mort den dô was geschên\\
+ and not wanted not see the murder.\tsc{acc} that.\tsc{acc} there had happened\\
+ `and they didn't want to see the murder that had happened.' \hfill (Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})
+
+
 
     \subsection{Modern German}
 In German, inverse attraction in headed relatives can be shown to be very different from inverse attraction in headless relatives. I am not set on an analysis yet. Under a double-headed Cinque-analysis, it is the external DP that is deleted. Grafting is also still an option.
