--- a/some OHG examples.tex
+++ b/some OHG examples.tex
@@ -34,52 +34,36 @@ thes sie imu thurh inuuidnîð ôgean uueldun.\\
  `what, you might have been a man, disciple from Galilee, of him who stood there' \hfill (Old Saxon, Heliand 4957-4958, \citealt[761]{behaghel1923})
 
 \ex. Old High German
-\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
- \\
- `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
-\bg. aer antwurta demo za imo sprah\\
- \\
- `' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
-\bg. gaat uz diu halt za dem iz forchaufent\\
+\ag. gaat uz diu halt za dem iz forchaufent\\
  \\
  `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
 \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
  \\
- `' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
-\bg. er spráh zi then es rúahtun\\
- he spoke to those.\tsc{dat}\\
- `' \hfill (Old High German, Otfrid I,23,35, \citealt[761]{behaghel1923})
+ `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
 \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
  \\
  `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
-\bg. bistu furira Abrahame, ouh then man hiar nu zalta.\\
- \\
- `' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
 \bg. thia laz ih themo iz lisit thar\\
  \\
  `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
-\bg. suachit thes nan sentit\\
- \\
- `' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
 \bg. noh so neduohti in gnuoge des si habetin\\
  \\
  `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
 \bg. tannoh pito ih tes noh fore ist (id quod)\\
  \\
  `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
+\bg. ih bibringu fona Juda dhen mina berga chisetzit\\
+  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
+  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+
 
 
 \ex. Middle High German
-\ag. der bewiset in des er suochte\\
- he directed\scsub{gen} him {that}.\tsc{gen} he sought\scsub{acc}\\
- `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
+
 
 
 \ex. ?
-\ag. diu habe niemer niht entuot, des der seele schaden si\\
- \\
- `' \hfill (?, Warn. 2490, \citealt[761]{behaghel1923})
-\bg. des himels unt der erde und swes din kint dar inne begriffen hat\\
+\ag. des himels unt der erde und swes din kint dar inne begriffen hat\\
  \\
  `' \hfill (?, R. v. Zw. 21,8, \citealt[761]{behaghel1923})
 \bg. die bevogtet werden sollen mit dem nechsten vattermagen oder dem dazu erkoren wird\\
@@ -92,14 +76,11 @@ thes sie imu thurh inuuidnîð ôgean uueldun.\\
  \\
  `' \hfill (?, Redwitz, Amaranth (Bl), \citealt[761]{behaghel1923})
 
-\exg. Magst gefallen wem du wilt\\
- \\
- `' \hfill Adversus - Komm' oh Tod
 
 
 
 
-\section{Headless relative clauses}
+\section{Headed relative clauses}
 
 \subsection{Proper attraction}
 
@@ -124,8 +105,6 @@ thes sie imu thurh inuuidnîð ôgean uueldun.\\
 \ex. \tsc{dat} instead of \tsc{acc}?
 
 \ex. \tsc{dat} instead of \tsc{nom}
-
-
 
 
 \ex. \tsc{acc} instead of \tsc{nom}
